@@ -1,6 +1,8 @@
 package ee.ut.anup.userservice.service.impl;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.*;
 
 import ee.ut.anup.userservice.dto.AddressDTO;
@@ -15,6 +17,7 @@ import ee.ut.anup.userservice.repository.AddressRepository;
 import ee.ut.anup.userservice.repository.DriverProfileRepository;
 import ee.ut.anup.userservice.repository.UserRepository;
 import java.util.Optional;
+import java.util.UUID;
 
 import ee.ut.anup.userservice.service.AuthService;
 import org.junit.jupiter.api.BeforeEach;
@@ -27,6 +30,8 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceImplTest {
+
+    private static final UUID USER_ID = UUID.fromString("11111111-1111-1111-1111-111111111111");
 
     @Mock
     private UserRepository userRepository;
@@ -78,7 +83,7 @@ class UserServiceImplTest {
 
         User userEntity = new User();
         userEntity.setEmail(userDto.email());
-        
+
         Address addressEntity = new Address();
         addressEntity.setStreet("Main St");
 
@@ -90,24 +95,24 @@ class UserServiceImplTest {
         userService.registerUser(userDto);
 
         // Then
-        verify(userRepository).save(argThat(user -> 
+        verify(userRepository).save(argThat(user ->
             user.getAddresses().size() == 1 &&
-            user.getAddresses().getFirst().getStreet().equals("Main St") &&
-            user.getAddresses().getFirst().getUser() == user
+            user.getAddresses().get(0).getStreet().equals("Main St") &&
+            user.getAddresses().get(0).getUser() == user
         ));
     }
 
     @Test
     void updateUserProfile_shouldEncodePassword_whenNewPasswordProvided() {
         User existingUser = new User();
-        existingUser.setUserId(7L);
+        existingUser.setUserId(USER_ID);
         existingUser.setEmail("test@example.com");
         existingUser.setPassword("old-hash");
         existingUser.setFullName("Test User");
         existingUser.setPhoneNumber("12345678");
 
         UpdateUserDTO request = new UpdateUserDTO(
-                7L,
+                USER_ID,
                 "test@example.com",
                 "new-secret",
                 "Updated User",
@@ -117,11 +122,11 @@ class UserServiceImplTest {
                 null
         );
 
-        when(userRepository.findById(7L)).thenReturn(Optional.of(existingUser));
+        when(userRepository.findById(USER_ID)).thenReturn(Optional.of(existingUser));
         when(passwordEncoder.encode("new-secret")).thenReturn("encoded-secret");
         when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        userService.updateUserProfile(7L, request);
+        userService.updateUserProfile(USER_ID, request);
 
         verify(passwordEncoder).encode("new-secret");
         verify(userRepository).save(argThat(user ->
@@ -134,12 +139,12 @@ class UserServiceImplTest {
     @Test
     void updateUserProfile_shouldKeepPassword_whenBlankPasswordProvided() {
         User existingUser = new User();
-        existingUser.setUserId(8L);
+        existingUser.setUserId(USER_ID);
         existingUser.setEmail("test@example.com");
         existingUser.setPassword("old-hash");
 
         UpdateUserDTO request = new UpdateUserDTO(
-                8L,
+                USER_ID,
                 "test@example.com",
                 "",
                 "Updated User",
@@ -149,10 +154,10 @@ class UserServiceImplTest {
                 null
         );
 
-        when(userRepository.findById(8L)).thenReturn(Optional.of(existingUser));
+        when(userRepository.findById(USER_ID)).thenReturn(Optional.of(existingUser));
         when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        userService.updateUserProfile(8L, request);
+        userService.updateUserProfile(USER_ID, request);
 
         verify(passwordEncoder, never()).encode(anyString());
         verify(userRepository).save(argThat(user ->
